<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/MainColor_Purple">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="회원가입"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/abc_vector_test" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/Contents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:weightSum="8">

        <LinearLayout
            android:id="@+id/UpperMagin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="5"
            android:orientation="vertical"
            android:weightSum="29">

            <LinearLayout
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:orientation="vertical"
                android:weightSum="6">

                <TextView
                    android:id="@+id/txt_label"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="100dp"
                    android:autoSizeMinTextSize="10dp"
                    android:autoSizeTextType="uniform"
                    android:text="이름" />

                <LinearLayout
                    android:id="@+id/margin_small1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"></LinearLayout>

                <EditText
                    android:id="@+id/edt_Nickname"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:background="@drawable/border_edittext"
                    android:ems="10"
                    android:hint="Nickname"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/margin2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:id="@+id/Nickname"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:orientation="vertical"
                android:weightSum="6">

                <TextView
                    android:id="@+id/txt_label2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="100dp"
                    android:autoSizeMinTextSize="10dp"
                    android:autoSizeTextType="uniform"
                    android:text="이메일 주소" />

                <LinearLayout
                    android:id="@+id/margin_small2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"></LinearLayout>

                <EditText
                    android:id="@+id/edt_Email"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:background="@drawable/border_edittext"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/margin3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:id="@+id/CheckPasswd"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:orientation="vertical"
                android:weightSum="6">

                <TextView
                    android:id="@+id/txt_label3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="100dp"
                    android:autoSizeMinTextSize="10dp"
                    android:autoSizeTextType="uniform"
                    android:text="비밀번호" />

                <LinearLayout
                    android:id="@+id/margin_small3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"></LinearLayout>

                <EditText
                    android:id="@+id/edt_passwd"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:background="@drawable/border_edittext"
                    android:ems="10"
                    android:hint="Password"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/margin4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:orientation="vertical"
                android:weightSum="6">

                <TextView
                    android:id="@+id/txt_label4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="100dp"
                    android:autoSizeMinTextSize="10dp"
                    android:autoSizeTextType="uniform"
                    android:text="비밀번호 확인" />

                <LinearLayout
                    android:id="@+id/margin_small4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"></LinearLayout>

                <EditText
                    android:id="@+id/edt_checkpasswd"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:background="@drawable/border_edittext"
                    android:ems="10"
                    android:hint="PasswordCheck"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/margin5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/btn_register_submit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@color/MainColor_Purple"
                android:text="회원가입 하기"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LowerMargin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="hint" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
